--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-accessible-accordion": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.49.9",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
