--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "cove-styleguide",
+  "name": "cdc-cove-styleguide",
   "version": "0.1.0",
-  "private": true,
+  "homepage": "https://rshelnutt.github.io/cdc-cove-styleguide/",
+  "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
-    "web-vitals": "^2.1.0"
+    "sass": "^1.49.9"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
